# IMClient

./: AddFriendPage.qml  CMakeLists.txt  Main.qml  README.md  backendworker.cpp  backendworker.h  chat.qml  chatclient.cpp  chatclient.h  chatmodel.cpp  chatmodel.h  databasemanager.cpp  databasemanager.h  desktop.qml  login.qml  main.cpp  protocolhandler.cpp  protocolhandler.h  regist.qml
